--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
   geolocator: ^9.0.1
-  google_api_headers: ^1.3.0
+  google_api_headers: ^1.5.0+1
   google_maps_flutter: ^2.1.10
   google_maps_webservice: ^0.0.20-nullsafety.5
   http: ^0.13.5
@@ -20,6 +20,8 @@ dependencies:
   provider: ^6.0.3
   tuple: ^2.0.0
   uuid: ^3.0.6
+  sliding_up_panel: ^2.0.0+1
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
